--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -6,6 +6,11 @@ on:
       - main
       - dev
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   check:
     runs-on: ubuntu-latest
